--- a/starwars/package.json
+++ b/starwars/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bulma": "^0.8.0",
+    "parcel": "^1.12.4",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-scripts": "3.1.2",
