--- a/starwars/package.json
+++ b/starwars/package.json
@@ -8,6 +8,8 @@
     "parcel": "^1.12.4",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-svg": "^9.13.3",
     "react-scripts": "3.1.2",
     "styled-components": "^4.4.1"
   },
